# projects

TELE-master/NUAGES_SRC/: CMakeLists.txt  Makefile  README  auto.c  cloud.c  cloud.h  compute.c  pixel.c  pixel.h  vector.c  vector.h
VOIR-COVID-master/: CMakeLists.txt  Makefile  README  build.sh  tarball.sh
VOIR-COVID-master/src/: .clang-format  control.cc  control.hh  detection.cc  detection.hh  main.cc
antoine.coulon-chess/: .gitignore  CMakeLists.txt  README  TODO  install.sh  run.sh  testsuite.sh  update_engine.sh
antoine.coulon-chess/src/: bitwise.cc  bitwise.hh  game.cc  game.hh  main.cc  move.cc  move.hh  options.cc  options.hh  pos.cc  pos.hh  types.hh
antoine.coulon-chess/src/IA/: gametree.cc  gametree.hh  heuristics.cc  heuristics.hh
antoine.coulon-chess/src/board/: board.cc  board.hh  board_constructors.cc  board_getters.cc  board_ia.cc  board_moves.cc
antoine.coulon-chess/src/interface/: color.hh  piece-type.hh  position.hh  uci.cc  uci.hh
antoine.coulon-chess/src/misc/: log.cc  log.hh  tools.cc  tools.hh
antoine.coulon-chess/src/moves/: bishop.cc  king.cc  knight.cc  moves.hh  pawn.cc  queen.cc  rook.cc
antoine.coulon-chess/src/pgn/: pgn-move.cc  pgn-move.hh  pgn-parser.cc  pgn-parser.hh  pgn.cc  pgn.hh
antoine.coulon-chess/tests/perft/: 3.perft  4.perft  5.perft  6.perft  7.perft  8.perft  9.perft
antoine.coulon-chess/tests/pgn/: draw.out  stalemate_enpassant.out
arduino-master/: .gitignore  Bluetooth.md  README.md  pymakr.conf
arduino-master/adc/: adc.go
arduino-master/cloud/: README.md  vision.py
arduino-master/enviro/: bluetooth.go  build.sh  enviro.go  main.go  reporter.go
arduino-master/omega/: README.md  build.sh  main.go  omega.go  omegainit.sh  reporter.go
arduino-master/raspi/: README.md  bluetooth.go  build.sh  grove.go  init.sh  main.go  reporter.go
arduino-master/wifi/: wifi.ino
arduino-master/wipy/: main.py
gpgpu-icp-master/: .clang-format  .gitignore  Makefile  README.md  ssh.sh
gpgpu-icp-master/Eigen/: Core
gpgpu-icp-master/cpu_src/: CMakeLists.txt  Makefile  icp.cc  icp.hh  log.cc  matrix.cc  points.cc  points.hh
gpgpu-icp-master/data/data_students/: cow_perso1.txt  cow_perso2.txt  perso.txt  perso2.txt  perso_tr1.txt  test_cow.txt
gpgpu-icp-master/data/tuto-paraview/: 01-openfile.xcf  02-applycsvparsingoptions.xcf  03-spreadsheetviewopens.xcf  04-addfiltertabtopoints.xcf  05-applycolmapping.xcf  06-focusonrenderview.xcf  07-displaydata.xcf  08-addfiltertransform.xcf  09-moveboxandapply.xcf  10-displayboth.xcf  11-selectdatatoexportinspreadsheet.xcf  README.html  README.md
gpgpu-icp-master/gpu_src/: CMakeLists.txt  Makefile  alignment.cu  corress.cu  icp.cu  icp.hh  log.cu  log.hh  main.cu  matrix.cu  matrix.hh  points.cu  points.hh
mfrc522_emu-master/: .clang-format  HELPME  TDL  install.sh  start.sh
mfrc522_emu-master/gistre/: Kconfig  Makefile  mfrc522.h  mfrc522_emu.c  mfrc522_emu.h  mfrc522_emu_drv.c  mfrc522_emu_internals.c  mfrc522_emu_internals.h
mfrc522_emu-master/gistre/card/: card.h  card_exit.c  card_fops.c  card_fops.h  card_init.c  card_read.c  card_write.c  card_write_funcs.h  card_write_gen_rand_id.c  card_write_mem_read.c  card_write_mem_write.c
rushC-master/: .gitignore  Makefile  README  TODO
rushC-master/maps/: lvl0.ez  lvl1.ez  lvl2.ez  lvl3.ez  lvl4.ez  lvl5.ez  lvl6.ez  lvl7.ez  lvl8.ez
rushC-master/src/: bullet.c  bullet.h  display.c  display.h  entity.c  entity.h  game.c  game.h  input.c  input.h  map.c  map.h  rush_coke.c  structs.h  update.c  update.h  utils.c  utils.h  vector2.c  vector2.h
